--- a/iWork.Web.UI/Template/Default/Controls/button/done.html
+++ b/iWork.Web.UI/Template/Default/Controls/button/done.html
@@ -1,3 +1,3 @@
-﻿<control iv-label="" >
-    <button type="button" class="btn btn-success done-btn" ng-click="formreset()">$iv-label</button>
+﻿<control iv-label="form.doneBtn" >
+    <button type="button" class="btn btn-success done-btn" ng-click="formreset()" translate >{{'$iv-label'}}</button>
 </control>
