--- a/iWork.Web.UI/Template/Default/Controls/button/iconic.html
+++ b/iWork.Web.UI/Template/Default/Controls/button/iconic.html
@@ -5,6 +5,6 @@
        view-link
        class="btn btn-iconic ">
         <icon iv-type="svg" iv-icon="$iv-icon"></icon>
-        <span>$iv-label</span>
+        <span translate >{{'$iv-label'}}</span>
     </a>
 </control>
