--- a/iWork.Web.UI/Template/Default/Controls/checkbox/checkbox.html
+++ b/iWork.Web.UI/Template/Default/Controls/checkbox/checkbox.html
@@ -14,8 +14,8 @@
                        ng-model="$iv-model.$iv-name"
                        ng-required="$iv-required"
                        ng-checked="$iv-checked" />
-                <span>
-                    $iv-label
+                <span translate >
+                    {{'$iv-label'}}
                 </span>
             </label>
             <validation iv-type="validation"></validation>
