--- a/iWork.Web.UI/Template/Default/Controls/checkbox/switch.html
+++ b/iWork.Web.UI/Template/Default/Controls/checkbox/switch.html
@@ -11,8 +11,8 @@
                    name="$iv-name"
                    ng-required="$iv-required"
                    switch-size="$iv-size">
-            <label for="$iv-name" class="control-label">
-                $iv-label
+            <label for="$iv-name" class="control-label" translate>
+                {{'$iv-label'}}
             </label>
             <validation iv-type="validation"></validation>
         </div>
