--- a/iWork.Web.UI/Template/Default/Controls/datepicker/time.html
+++ b/iWork.Web.UI/Template/Default/Controls/datepicker/time.html
@@ -9,7 +9,7 @@
          iv-autoclose="true">
 
     <div class="form-group">
-        <label for="$iv-name" class="control-label col-md-2 col-sm-3">$iv-label</label>
+        <label for="$iv-name" class="control-label col-md-2 col-sm-3" translate >{{'$iv-label'}}</label>
         <div class=" col-md-10 col-sm-9">
             <div class='input-group date timepicker'>
                 <span class="input-group-addon">
