--- a/iWork.Web.UI/Template/Default/Controls/input/password-confirm.html
+++ b/iWork.Web.UI/Template/Default/Controls/input/password-confirm.html
@@ -1,4 +1,4 @@
-﻿<control iv-label=""
+﻿<control iv-label="form.confirmPassword"
          iv-name=""
          iv-required="false"
          iv-minlength=""
@@ -7,13 +7,13 @@
          iv-pattern="">
 
     <div class="form-group">
-        <label for="$iv-name" class="control-label col-md-2 col-sm-3">$iv-label</label>
+        <label for="$iv-name" class="control-label col-md-2 col-sm-3" translate >{{'$iv-label'}}</label>
         <div class="col-md-10 col-sm-9">
             <input type="password"
                    class="form-control"
                    name="$iv-name"
                    id="$iv-name"
-                   placeholder="$iv-label"
+                   placeholder="{{'$iv-label' | translate }}"
                    ng-model="$iv-model.$iv-name"
                    ng-required="$iv-required"
                    ng-minlength="$iv-minlength"
@@ -21,10 +21,10 @@
                    ng-maxlength="$iv-maxlength" />
             <validation iv-type="validation">
                 <div ng-message="match" error>
-                    Password Dos not match!
+                    <span translate="validation.match"></span>
                 </div>
                 <div ng-message="pwd" error>
-                    Password strength!
+                    <span translate="validation.pwd"></span>
                 </div>
 
             </validation>
