--- a/iWork.Web.UI/Template/Default/Controls/radio/radio.html
+++ b/iWork.Web.UI/Template/Default/Controls/radio/radio.html
@@ -9,8 +9,8 @@
                id="$iv-label$iv-name-radio"
                ng-model="$iv-model.$iv-name"
                ng-checked="$iv-checked" />
-        <span>
-            $iv-label
+        <span translate >
+            {{'$iv-label'}}
         </span>
     </label>
 </control>
