--- a/iWork.Web.UI/Template/Default/Controls/view/partial.html
+++ b/iWork.Web.UI/Template/Default/Controls/view/partial.html
@@ -2,7 +2,8 @@
     <script>
         sitemap.push({
             viewname: "$iv-name",
-            href: "$iv-href"
+            href: "$iv-href",
+            title: "$iv-title"
         });
     </script>
 </control>
