--- a/iWork.Web.UI/Template/Default/Controls/button/cancel.html
+++ b/iWork.Web.UI/Template/Default/Controls/button/cancel.html
@@ -1,3 +1,3 @@
-﻿<control>
-    <button type="button" class="btn btn-default cancel-btn" ng-click="formreset()">$iv-label</button>
+﻿<control iv-label="form.resetBtn" >
+    <button type="button" class="btn btn-default cancel-btn" ng-click="formreset()" translate >{{'$iv-label'}}</button>
 </control>
