--- a/iWork.Web.UI/Template/Default/Controls/input/spinner.html
+++ b/iWork.Web.UI/Template/Default/Controls/input/spinner.html
@@ -6,13 +6,13 @@
          iv-max=""
          iv-step="">
     <div class="form-group">
-        <label for="$iv-name" class="control-label col-md-2 col-sm-3">$iv-label</label>
+        <label for="$iv-name" class="control-label col-md-2 col-sm-3" translate >{{'$iv-label'}}</label>
         <div class="col-md-10 col-sm-9">
             <input type="number"
                    class="form-control"
                    name="$iv-name"
                    id="$iv-name"
-                   placeholder="$iv-label"
+                   placeholder="{{'$iv-label' | translate }}"
                    ng-model="$iv-model.$iv-name"
                    ng-required="$iv-required"
                    step="$iv-step"
