--- a/iWork.Web.UI/Template/Default/Controls/select/select.html
+++ b/iWork.Web.UI/Template/Default/Controls/select/select.html
@@ -2,7 +2,7 @@
          iv-name=""
          iv-required="">
     <div class="form-group">
-        <label for="$iv-name-select" class="col-lg-2 control-label">$iv-label</label>
+        <label for="$iv-name-select" class="col-lg-2 control-label" translate >{{'$iv-label'}}</label>
         <div class="col-lg-10">
             <select class="form-control"
                     id="$iv-name-select"
