--- a/iWork.Web.UI/Template/Default/Layout/Default.html
+++ b/iWork.Web.UI/Template/Default/Layout/Default.html
@@ -1,13 +1,10 @@
 ﻿<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" ng-app="iWork">
+<html xmlns="http://www.w3.org/1999/xhtml" ng-app="iWork" ng-controller="iWorkRoot">
 <head>
     <meta charset="utf-8">
-    <title>Title</title>
+    <title translate >{{title}}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/Content/lib/bootstrap/css/bootstrap.css" media="screen">
-    <!-- Uncomment Next two line for RTL view  -->
-    <!--<link rel="stylesheet" href="//cdn.rawgit.com/morteza/bootstrap-rtl/master/dist/cdnjs/3.3.1/css/bootstrap-rtl.css">
-    <link rel="stylesheet" href="/Content/css/style.rtl.css" media="screen">-->
     <link rel="stylesheet" type="text/css" href="/Content/lib/dropzone/dropzone.css" />
     <link rel="stylesheet" type="text/css" href="/Content/lib/datatables/css/dataTables.bootstrap.css" />
     <link rel="stylesheet" type="text/css" href="/Content/lib/bootstrap-switch/css/bootstrap-switch.css" />
@@ -15,9 +12,7 @@
     <link rel="stylesheet" href="/Content/css/style.css" media="screen">
     <script src="/Content/lib/jquery/jquery-2.1.1.min.js"></script>
     <script src="/Content/lib/bootstrap/js/bootstrap.min.js"></script>
-
     <script src="/Content/lib/bootstrap-lib/bootstrap-confirmation.js"></script>
-
     <script src="/Content/lib/moment.js"></script>
     <script src="/Content/lib/datatables/js/jquery.dataTables.js"></script>
     <script src="/Content/lib/datatables/js/dataTables.bootstrap.js"></script>
@@ -26,37 +21,43 @@
     <script src="/Content/lib/angular/angular-animate.js"></script>
     <script src="/Content/lib/angular/angular-messages.js"></script>
     <script src="/Content/lib/jquery-inputmask/jquery.inputmask.bundle.js"></script>
-
+    <script src="/Content/lib/angular-translate/angular-translate.min.js"></script>
+    <script src="/Content/lib/angular-translate/loader-url.js"></script>
+    <script src="/Content/lib/angular-translate/loader-static-files.js"></script>
+    <script src="/Content/lib/angular-translate/loader-partial.js"></script>
     <script src="/Content/lib/angular-strap/angular-strap.js"></script>
     <script src="/Content/lib/angular-strap/angular-strap.tpl.js"></script>
-
     <script src="/Content/lib/angular/angular-bootstrap-switch.js"></script>
     <script src="/Content/lib/angular/ng-password-strength.min.js"></script>
-
     <script src="/Content/lib/bootstrap-switch/js/bootstrap-switch.js"></script>
     <script src="/Content/lib/magicsugges/magicsuggest.js"></script>
     <script src="/Content/lib/jquery.svginject.js" type="text/javascript"></script>
     <script src="/Content/lib/dropzone/dropzone.js" type="text/javascript"></script>
-
     <script src="/Content/js/app.js" type="text/javascript"></script>
     <script src="/Content/js/common.js"></script>
     <script src="/Content/js/controllers/submenu.js"></script>
     <script src="/Content/js/directives/directives.js"></script>
+    <script src="/Content/js/controllers/iwrokroot.js"></script>
+    <script src="/Content/js/controllers/translate.js"></script>
 </head>
 <body>
     <nav class="navbar navbar-default navbar-fixed-top">
         <div class="navbar-header col-md-1 col-xs-9">
             <a class="navbar-brand" href="#">iWork</a>
         </div>
-        <div id="navbar" class="col-md-10 hidden-xs">
+        <div id="navbar" class="col-md-9 hidden-xs">
             <ul class="nav navbar-nav">
-                <li><a href="/iView/Contacts/list.html">Contact</a></li>
-                <li><a href="/iView/kitchensink/kitchensink.html">kitchensink</a></li>
+                <li><a href="/iView/Contacts/list.html" translate>{{'contact.title'}}</a></li>
+                <li><a href="/iView/kitchensink/kitchensink.html" translate>{{'kitchensink.title'}}</a></li>
             </ul>
             <div class="nav navbar-nav navbar-right">
             </div>
         </div>
-        <div class="navbar-right col-md-1 col-xs-3">
+        <div class="navbar-right col-md-2 col-xs-3">
+            <div ng-controller="TranslateController" class="pull-right flip translate-buttton-box">
+                <button class="btn" ng-click="changeLanguage('fa')">fa</button>
+                <button class="btn" ng-click="changeLanguage('en')">en</button>
+            </div>
             <div class="member-territory pull-right flip">
                 <img svg-inject class="svg-inject" src="/Content/img/user.svg" />
             </div>
