--- a/iWork.Web.UI/Template/Default/Layout/Default.html
+++ b/iWork.Web.UI/Template/Default/Layout/Default.html
@@ -17,6 +17,7 @@
     <script src="/Content/lib/datatables/js/jquery.dataTables.js"></script>
     <script src="/Content/lib/datatables/js/dataTables.bootstrap.js"></script>
     <script src="/Content/lib/angular/angular.min.js"></script>
+    <script src="/Content/lib/angular/angular-cookies.js"></script>
     <script src="/Content/lib/angular/angular-route.js"></script>
     <script src="/Content/lib/angular/angular-animate.js"></script>
     <script src="/Content/lib/angular/angular-messages.js"></script>
@@ -57,6 +58,7 @@
             <div ng-controller="TranslateController" class="pull-right flip translate-buttton-box">
                 <button class="btn" ng-click="changeLanguage('fa')">fa</button>
                 <button class="btn" ng-click="changeLanguage('en')">en</button>
+                <button class="btn" ng-click="changeLanguage('fr')">fr</button>
             </div>
             <div class="member-territory pull-right flip">
                 <img svg-inject class="svg-inject" src="/Content/img/user.svg" />
